--- a/package.json
+++ b/package.json
@@ -3,7 +3,10 @@
   "version": "1.0.0",
   "main": "index.js",
   "scripts": {
-    "start": "node index.js"
+    "start": "node index.js",
+    "docker:build": "docker build -t management-system .",
+    "docker:up": "docker run -d --name management-system -p 4000:5000 management-system",
+    "docker:down": "docker stop management-system && docker rm management-system"
   },
   "dependencies": {
     "express": "^4.18.2"
